@@ -1,3 +1,5 @@
+Mar 16 2004  devel  Tweaked acx100 source to match acx's new orinoco-esque
+                     method
 Mar 15 2004  devel  Finished gpsxml-sanitize, util takes a xml files and prints
                      the valid points back to stdout.
                     Fixed sending a removed network as a NETWORK statement
